# simulation-controller

./: .gitignore  Cargo.toml  README.md
config/: simple_chat_config.toml  simple_config.toml
src/: graph_utils.rs  main.rs  test.rs  utils.rs  validation.rs
ui/: add_sender_menu.slint  button.slint  drone_menu.slint  graph.slint  list_item.slint  main.slint  pdr_menu.slint
ui/menu/: add_media_file_from_path_menu.slint  add_sender_menu.slint  add_text_file_from_path_menu.slint  add_text_file_menu.slint  get_file_menu.slint  get_media_file_menu.slint  get_text_file_menu.slint  register_to_server_menu.slint  remove_media_file_menu.slint  remove_sender_menu.slint  remove_text_file_menu.slint  send_message_menu.slint  set_packet_drop_rate_menu.slint
