[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
slint = "1.12.1"
once_cell = "1.19"
crossbeam = "0.8.4"
common = { path = "../common" }
network-initializer = { path = "../network-initializer" }
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
ctrlc = "3.4.7"
uuid = { version = "1.18.0", features = [ "serde", "v4"] }
regex = "1.11.2"

[build-dependencies]
slint-build = "1.3"
